Incorporate Feedback From Beta Testing (#6)
* Incorporate Feedback From Beta Testing

Based on the notes from beta testers, this makes the following changes:
- remove the need for .netrc (unnecessary on public branch)
- add documentation for missing dependencies
- make notes/logs for permissions for docker and huggingface

--- a/src/wizard/configs/deploy/ord_oss.yaml
+++ b/src/wizard/configs/deploy/ord_oss.yaml
@@ -11,7 +11,8 @@ defines:
   nre_cache_size: 5  # Because below we have 2 sensorsim instances on each GPU
   physics_cache_size: 6  # should match or exceed concurrent unique scenes
 
-eval.num_processes: 32
+eval:
+  num_processes: 32
 
 wizard:
     run_method: "SLURM"
