--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.8.0"
 description = "Workspace for Alpamayo Sim development"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
-dependencies = ["nuplan-devkit>=1.1.0"]
+dependencies = [
+]
 
 [tool.uv.workspace]
 members = [
