[Suite Management] Implement HuggingFace Suite Mgmt
The car2sim pipeline needs to be made more general to support the
huggingface storage target. This MR adds that support.

--- a/src/wizard/pyproject.toml
+++ b/src/wizard/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "polars>=1.0.0",
     "pyarrow",
     "filelock",
+    "boto3",
+    "huggingface_hub",
     "tqdm",
     "typing-extensions",
     "pandas",
