--- a/src/wizard/configs/base_config.yaml
+++ b/src/wizard/configs/base_config.yaml
@@ -377,7 +377,9 @@ eval:
 
   video:
     render_video: True
+    video_layouts: ["default"]  # ["default", "reasoning_overlay"]
     camera_id_to_render: camera_front_wide_120fov
+    reasoning_text_refresh_interval_s: 1.0  # for reasoning overlay layout only
     overlay_plans_on_camera: True
     render_every_nth_frame: 1
     generate_combined_video: False
