--- a/src/driver/pyproject.toml
+++ b/src/driver/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "uv_build"
 
 [project]
 name = "alpasim_driver"
-version = "0.4.0"
+version = "0.5.0"
 description = "Adapters for open-source drivers in Alpasim"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
@@ -21,11 +21,14 @@ dependencies = [
   "grpcio",
   "hydra-core",
   "omegaconf",
-  "alpasim-grpc"
+  "alpasim-grpc",
+  "beartype",
+  "jaxtyping",
+  "timm",
 ]
 
-  [project.scripts]
-  vam_driver = "alpasim_driver.main:main"
+[project.scripts]
+alpasim_driver_driver = "alpasim_driver.main:main"
 
 [tool.uv.sources]
 vam = { git = "https://github.com/valeoai/VideoActionModel.git" }
