[Nuplan] trajdata load into runtime success

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ data/vavam-driver/*
 # uv.lock is only used in local development. On the server, we use uv tool run,
 # which does not require uv.lock.
 **/uv.lock
+
+# local dir
+my_run/
+outputs/
