--- a/src/wizard/pyproject.toml
+++ b/src/wizard/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "alpasim_wizard"
 version = "0.0.1"
-requires-python = ">=3.11.0"
+requires-python = ">=3.11.0,<3.13.0"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
