--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           # AlpaSim uses a setup script to handle gRPC and venv
           chmod +x setup_local_env.sh
-          ./setup_local_env.sh
+          source ./setup_local_env.sh
           
       - name: Static Analysis (Linting)
         run: |
