--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,13 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install dependencies and compile Protos
-        with:
-          HF_TOKEN: ${{ secrets.HF_TOKEN }}      
+      - name: Install dependencies and compile Protos    
         run: |
           # AlpaSim uses a setup script to handle gRPC and venv
           chmod +x setup_local_env.sh
           source ./setup_local_env.sh
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}  
           
       - name: Static Analysis (Linting)
         run: |
