Cherry pick changes up to Feb 18
ARM64 Support

Adds full ARM64 support for running AlpaSim on Grace-Blackwell platforms.

Tested on the following hardware:
- **DGX Spark** - local Docker Compose
- **DGX Station** - local Docker Compose
- **SLURM cluster** - pyxis/enroot

All services now run on ARM: driver, physics, controller, runtime, and sensorsim (NRE with gsplat).
Only trafficsim is skipped.

| Workaround | Reason |
|---|---|
| NGC PyTorch base image | Only source of CUDA-enabled PyTorch on aarch64 (no PyPI wheels) |
| VaVAM FP32 + no autocast | `torch.amp.autocast` doesn't auto-cast Float32 weights in F.linear on ARM — confirmed broken on PyTorch 2.6 and 2.8 |
| `TORCH_CUDA_ARCH_LIST=9.0+PTX` on sensorsim | Blackwell compute 10.3 not recognized by NRE's PyTorch; slangtorch JIT fails |
| `--container-writable` on srun | IPP5 pyxis defaults to read-only; uv/matplotlib need writable filesystem |
| gsplat renderer (not nrend) | NRE nrend C++ renderer expects newer scene data format |
| Pin setuptools<82 | grpcio-tools imports pkg_resources, removed in setuptools 82 |

---
cicd: make test-slurm wait for build-services before on-demand squash
When the wizard creates .sqsh on demand it runs enroot import; the image
must exist in the registry. Add build-services as an optional need for
test-slurm so the image is built and pushed before the SLURM test runs.

Trivial comment in src/runtime/pyproject.toml to trigger build-services
in CI for verifying this fix.

---
wizard: create squash files on demand
Remove the separate squash-services and squash-external-services CI
jobs. The wizard now ensures .sqsh files exist when deploying on SLURM:
it looks in wizard.sqshcaches and, if missing, creates the squash in
the first writable cache under a per-image file lock. Per-cluster
cache remains configurable via defines.filesystem / sqshcaches.

- Add ensure_sqsh_path() in wizard utils (lock + enroot import).
- Use ensure_sqsh_path in slurm deployment instead of image_url_to_sqsh

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ __pycache__/
 .claude
 .serena
 .zed
-CLAUDE.md
 
 **/*.egg-info
 **/build/
@@ -31,3 +30,4 @@ data/vavam-driver/*
 # uv.lock is only used in local development. On the server, we use uv tool run,
 # which does not require uv.lock.
 **/uv.lock
+.worktrees/
