--- a/src/runtime/pyproject.toml
+++ b/src/runtime/pyproject.toml
@@ -2,9 +2,10 @@
 requires = [ "setuptools>=61.0" ]
 build-backend = "setuptools.build_meta"
 
+# Trivial comment to trigger CI build-services (for test-slurm dependency).
 [project]
 name = "alpasim-runtime"
-version = "1.57.0"
+version = "1.60.0"
 description = "Runtime of the Alpamayo Sim"
 requires-python = ">=3.11,<3.13"
 authors = [{name = "Michal Tyszkiewicz", email = "mtyszkiewicz@nvidia.com"}]
