--- a/src/tools/pyproject.toml
+++ b/src/tools/pyproject.toml
@@ -18,7 +18,8 @@ dependencies = [
     "alpasim_grpc",
     "alpasim_utils",
     "alpasim_eval",
-    "opencv-python",
+    "opencv-python-headless",
+    "trajdata-alpasim==1.4.3",
     "polars",
     "tqdm",
     "rich",
