--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "alpasim_workspace"
-version = "0.21.0"
+version = "0.31.0"
 description = "Workspace for Alpamayo Sim development"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
@@ -14,6 +14,7 @@ members = [
   "src/grpc",
   "src/runtime",
   "src/utils",
+  "src/utils_rs",
   "src/physics",
   "src/tools",
   "src/driver",
