--- a/src/driver/pyproject.toml
+++ b/src/driver/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "uv_build"
 
 [project]
 name = "alpasim_driver"
-version = "0.9.0"
+version = "0.14.0"
 description = "Adapters for open-source drivers in Alpasim"
 readme = "README.md"
 requires-python = ">=3.12,<3.13"
@@ -14,7 +14,7 @@ dependencies = [
   "alpamayo_r1",
   "einops",
   "numpy",
-  "opencv-python",
+  "opencv-python-headless",
   "torch",
   "pillow",
   "rich",
@@ -27,6 +27,7 @@ dependencies = [
   "jaxtyping",
   "timm",
   "pygame>=2.5.0", # manual driving
+  "alpasim_utils",
 ]
 
 [project.scripts]
@@ -36,3 +37,4 @@ alpasim_driver_main = "alpasim_driver.main:main"
 vam = { git = "https://github.com/valeoai/VideoActionModel.git" }
 alpamayo_r1 = { git = "https://github.com/NVlabs/alpamayo.git", rev = "74750b0bd86605ced9faed9fe83434b07f95e9dc"}
 alpasim-grpc = { workspace = true }
+alpasim_utils = { workspace = true }
