--- a/src/eval/pyproject.toml
+++ b/src/eval/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "alpasim_eval"
-version = "1.34.0"
+version = "1.36.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11,<3.13"
@@ -25,7 +25,7 @@ dependencies = [
   "pytest",
   "csaps",
   "ipywidgets",
-  "opencv-python",
+  "opencv-python-headless",
   "Pillow",
   "numpy",
   "yappi",
