--- a/src/grpc/pyproject.toml
+++ b/src/grpc/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = ">=3.11,<3.13"
 dependencies = [
   "grpcio",
   "grpcio-tools",
+  "setuptools<82",  # pkg_resources removed in v82; grpcio-tools still imports it
   "dataclasses-json>=0.6.7",
   "protobuf>=4.0.0,<5.0.0",
   "numpy",
